<resources>
    <string name="app_name">Demo L09</string>
    <string name="tvTitle">Song Title</string>
    <string name="editTitle">Enter song title here</string>
    <string name="tvSingers">Singers</string>
    <string name="editSingers">Enter singers\' name here</string>
    <string name="tvYear">Year</string>
    <string name="editYear">Enter year of release here</string>
    <string name="btnInsert">Insert</string>
    <string name="btnShowList">Show List</string>
    <string name="starShow">Show All Songs with 5 Stars</string>
    <string name="tvID">Song ID</string>
    <string name="tvIDnum">number</string>
    <string name="btnUpdate">Update</string>
    <string name="btnDelete">Delete</string>
    <string name="btnCancel">Cancel</string>

    <string name="tvRating">Stars</string>
    <string name="star1">1</string>
    <string name="star2">2</string>
    <string name="star3">3</string>
    <string name="star4">4</string>
    <string name="star5">5</string>
</resources>